Fix figure reference.

--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -1017,7 +1017,7 @@ Both the one Euler pole and the two Euler pole fits are able to do a good job of
 The one Euler pole inversion does least well fitting the Mamainse lower normal and upper reversed pole,
 and the North Shore Volcanic Group pole, with the recovered paths skirting the edges of those poles.
 Furthermore, neither inversion does has a great fit with the Michipicoten Island Formation.
-The two Euler pole case finds a well-constrained changepoint (see Figure I need to make this figure) at $\sim$1098 Ma.
+The two Euler pole case finds a well-constrained changepoint (see Figure~\ref{fig:keweenawan_speeds_2}b) at $\sim$1098 Ma.
 This slowdown in plate speed is consistent with the conclusions of \citet{davis1997geochronology} 
 and \citet{swanson2009no}, though the speeds in our model reflect overall plate speeds 
 (rather than just latitudinal speeds) and naturally incorporate age uncertainties.
