--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -1032,7 +1032,7 @@ which could be explained by faster average plate motions in the Proterozoic.
 Alternatively, it could be due to a true polar wander (TPW) event \citep{evans2003true, swanson2009no},
 which can move the solid earth at faster rates than those taken be be the maximum
 for differential plate motions \citep{cambiotti2011new}.
-Rose and Buffett (2016) performed a scaling analysis for rates of true polar wander and 
+In Chapter~\ref{chap:tpw_rate} we performed a scaling analysis for rates of true polar wander and 
 found that in a younger, more vigorously convecting planet, TPW becomes more likely.
 If we regard such high plate velocities as unlikely, then TPW becomes a good alternative explanation.
 
@@ -1047,7 +1047,7 @@ It can, however, be caused by a combination of plate motion and TPW.
 The PEPs in the two Euler pole inversion do allow for Euler poles that are 90$^\circ$ from
 the paleomagnetic poles, and thus could be interpreted as primarily due to TPW.
 The first rotation is $2^\circ-4^\circ$/Myr, and the second is $1^\circ-2^\circ$/Myr.
-These TPW rates are well within the maximum rate estimate of 6$^\circ$/Myr from Rose and Buffett (2016),
+These TPW rates are well within the maximum rate estimate of 6$^\circ$/Myr from Section~\ref{sec:discussion},
 and only moderately higher than the Pleistocene estimates from \citet{cambiotti2011new}.
 
 \section{Conclusions}
