Comments from Nick.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -631,6 +631,13 @@
   year={2016},
 }
 
+@inproceedings{swanson2016new,
+  title={New geochronologic and paleomagnetic constraints on Midcontinent Rift development},
+  author={Swanson-Hysell, Nick and Ramezani, Jahandar and Fairchild, Luke and Rose, Ian},
+  booktitle={Geological Society of America Abstracts with Programs},
+  year={2016}
+}
+
 @article{evans2003true,
   title={True polar wander and supercontinents},
   author={Evans, David AD},
