Edits to table.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -638,6 +638,17 @@
   year={2016}
 }
 
+@article{schoene2006reassessing,
+  title={Reassessing the uranium decay constants for geochronology using ID-TIMS U--Pb data},
+  author={Schoene, Blair and Crowley, James L and Condon, Daniel J and Schmitz, Mark D and Bowring, Samuel A},
+  journal={Geochimica et Cosmochimica Acta},
+  volume={70},
+  number={2},
+  pages={426--445},
+  year={2006},
+  publisher={Elsevier}
+}
+
 @article{evans2003true,
   title={True polar wander and supercontinents},
   author={Evans, David AD},
