--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -815,6 +815,7 @@ This gives us the opportunity to compare the results of our model to a one deriv
 
 \begin{table}
 \scriptsize
+\centering
 \input{tables/australia_poles}
 \caption[Paleomagnetic poles used for the Australia inversion.]{Paleomagnetic poles used for the Australia inversion, as well as references. 
 $\psi_p$ and $\phi_p$ give the latitude and longitude of the mean pole position, and $A_{95}$ gives the 95\% angular confidence interval for that position.
@@ -943,6 +944,7 @@ The paleomagnetic poles we use, along with uncertainties and age constraints are
 \begin{landscape}
 \begin{table}
 \scriptsize
+\centering
 \input{tables/keweenawan_poles}
 \caption[Paleomagnetic poles used for the Keweenawan track inversion.]{Paleomagnetic poles used for the Keweenawan inversion, as well as references for their positions and ages. 
 $\psi_p$ and $\phi_p$ give the latitude and longitude of the mean pole position, and $A_{95}$ gives the 95\% angular confidence interval for that position.
