update age constraints on Brown Creek Fm pole using Shafik1997a which is now in the .bib

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -1,3 +1,30 @@
+@article{Shafik1997a,
+	Author = {Shafik, S. and Idnurm, M.},
+	Journal = {Australian Journal of Earth Sciences},
+	Month = {Feb},
+	Number = {1},
+	Pages = {77--86},
+	Title = {Calcareous microplankton and polarity reversal stratigraphies of the upper Eocene browns creek clay in the Otway Basin, southeast Australia: Matching the evidence},
+	Volume = {44},
+	Year = {1997}}
+
+
+@article{Irving1977a,
+	Annote = {10.1038/270304a0},
+	Author = {Irving, E. },
+	Day = {24},
+	Journal = {Nature},
+	M3 = {10.1038/270304a0},
+	Month = {11},
+	Number = {5635},
+	Pages = {304--309},
+	Title = {Drift of the major continental blocks since the Devonian},
+	Ty = {JOUR},
+	Url = {http://dx.doi.org/10.1038/270304a0},
+	Volume = {270},
+	Year = {1977},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/270304a0}}
+
 @article{swanson2009no,
     title={No asymmetry in geomagnetic reversals recorded by 1.1-billion-year-old {K}eweenawan basalts},
     author={Swanson-Hysell, Nicholas L and Maloof, Adam C and Weiss, Benjamin P and Evans, David AD},
@@ -545,7 +572,7 @@
  isbn = {0133902838, 9780133902839},
  edition = {1st},
  publisher = {Addison-Wesley Professional},
-} 
+}
 
 
 @book{sivia2006data,
