small edits to manuscript and one addition to .bib

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -1,3 +1,12 @@
+@article{Davis1985a,
+	Author = {Davis, D.W. and Sutcliffe, R.H.},
+	Journal = {Geological Society of America Bulletin},
+	Pages = {1572-1579},
+	Title = {{U}-{P}b ages from the {N}ipigon plate and northern {L}ake {S}uperior},
+	Volume = {96},
+	Year = {1985}}
+
+
 @article{Shafik1997a,
 	Author = {Shafik, S. and Idnurm, M.},
 	Journal = {Australian Journal of Earth Sciences},
