--- a/bayesian_plate_reconstruction.tex
+++ b/bayesian_plate_reconstruction.tex
@@ -119,7 +119,7 @@
 \begin{abstract}
 Apparent polar wander (APW) paths from paleomagnetic poles provide the most direct data
 for reconstructing past paleogeography and plate motions for times earlier than $\sim$200 Ma. 
-However, it can be difficult to interpret APW paths in the presence of large errors,
+However, it can be difficult to interpret APW paths in the presence of errors on pole positions,
 age uncertainties, and the lack of paleolongitude control in traditional paleomagnetic analysis.
 Approaches for dealing with the uncertainties and compiling paleomagnetic poles 
 into a single APW path include spline fits and running means.
@@ -822,7 +822,7 @@ Upper and lower age bounds come from estimates from \citet{idnurm1985lateI} and 
 \end{table}
 
 The most reliable Cenozoic Australian paleomagnetic data comes from \citet{idnurm1985lateI} and \citet{idnurm1994new}.
-Additional paleomagnetic poles were developed prior to Idnurm's work, but they show considerably more scatter,
+While some Cenozoic paleomagnetic poles from Australia were developed prior to Idnurm's work, they show considerably more scatter,
 and there are concerns that they do not adequately average secular variations
 \citep{idnurm1985lateI, klootwijk2009sedimentary}.
 \citet{idnurm1985lateII} found that the latitude-age progression of the paleomagnetic
@@ -874,6 +874,7 @@ consistent with the conclusions of \citet{idnurm1985lateII}.
 We conclude that the discrepancy between the Australian paleomagnetic data and
 Cenozoic plate motion models remains.
 
+
 \begin{figure*}
 \includegraphics[width=0.9\textwidth]{figures/australia/australia_paths_2.pdf}
 \caption[Australian Cenozoic APW path fit to two Euler rotations.]{Australian Cenozoic APW path fit to two Euler rotations. 
@@ -897,11 +898,11 @@ Cenozoic plate motion models remains.
 \label{sec:keweenawan}
 \subsection{Geologic context}
 The Keweenawan province is a Mesoproterozoic succession of volcanic and sedimentary rocks
-which outcrops in the region around Lake Superior, including on the Keweenaw Peninsula.
-The province represents the products of a failed rift zone in the middle of Laurentia which was active
-from about 1110 to 1080 Ma \citep{swanson2014magmatic, fairchild2016end}.
+which outcrops in the region around Lake Superior, including the Keweenaw Peninsula.
+The province represents the products of a failed rift that developed in the interior of Laurentia and was active
+from about 1110 to 1080 Ma \citep{Davis1985a,swanson2014magmatic, fairchild2016end}.
 Geochronology and paleomagnetism from the Keweenawan province has been central to reconstructions
-of paleogeography and dynamics of the Mesoproterozoic Earth \citep[e.g.][]{li2008assembly, evans2009palaeomagnetically}.
+of paleogeography and dynamics of the Mesoproterozoic \citep[e.g.][]{li2008assembly, evans2009palaeomagnetically}.
 
 Paleomagnetic studies of the Keweenawan province have long shown asymmetry between normal and
 reverse polarities of the magnetization, which has been interpreted to be a result of significant 
@@ -909,19 +910,20 @@ non-dipole behavior of Earth's magnetic field during the Mesoproterozoic \citep{
 More recent high-resolution paleomagnetism has shown that the apparent reversal asymmetry
 is an artifact of temporal gaps in sampling \citep{swanson2009no, kulakov2013paleomagnetism}. 
 Instead, the paleomagnetic poles are symmetric with respect to polarity,
-but the paleomagnetic directions rapidly shallow over the course of the rifting period,
+but the paleomagnetic directions recorded in Midcontinent rift volcanics and intrusions rapidly shallow over the course of the rifting period,
 corresponding to equatorward motion of Laurentia.
 
 A consequence of this reinterpretation of the paleomagnetic data is that Laurentia's apparent
 polar wander rate, and thus its implied plate motion, is quite fast.
 A Monte Carlo approach (described in Section~\ref{sec:latitudinal_drift}) by \citet{swanson2014confirmation}
 found an implied latitudinal drift rate of $\sim$24 cm/yr, with a 95\% confidence interval of 15.2-44.4 cm/yr.
-These rates are significantly faster than the fastest Cenozoic plate speeds \citep{zahirovic2015tectonic}.
-Possible explanations for such fast rates include faster plate speeds in the Proterozoic (possibly due to decreased
-mantle viscosity in a hotter, younger Earth) or true polar wander \citep{swanson2009no}.
+At the high end, these rates are significantly faster than the fastest Cenozoic plate speeds \citep{zahirovic2015tectonic}.
+Interpretations of plate kinematic models for the past 200 million years, led \cite{zahirovic2015tectonic} to conclude that motion of plates with substantial continental lithosphere above 15 cm/yr requires exceptional explanation.
+Possible explanations for such fast rates recorded in the Midcontinent Rift include faster plate speeds in the Proterozoic (possibly due to decreased
+mantle viscosity in a hotter, younger Earth), increased convective vigor associated with mantle avalanching or true polar wander \citep{swanson2009no}.
 
-Finally, there is some evidence from combined paleomagnetic/geochonologic studies that
-the APW rate during the Keweenawan rifting slowed down.
+Combined paleomagnetic and geochonologic studies have also been interpreted to indicate that
+the APW rate during the Keweenawan rifting slowed down in the later stages of rift development.
 \citet{davis1997geochronology} inferred a change in minimum plate speed from $\sim$22 cm/yr
 to $\sim$8 cm/yr at around 1095 Ma. Similar conclusions were reached by \citet{swanson2009no}.
 However, more recent geochronology and paleomagnetism from the late stage volcanics
